Fix page spacing

--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -3,7 +3,7 @@ body{
 }
 
 #content-wrapper{
-    top: 0; left: 0;
+    top: 0; left: 0; bottom: 0;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -18,13 +18,17 @@ body{
 
 #site-header {
     width: 100%;
+    flex: 0 1 auto;
 }
 
 #site-footer{
-    position: fixed;
+    position: relative;
     width: 100%;
-    left: 0;
+    height: 100%;
     bottom: 0;
+    align-self: flex-end;
+    margin-bottom: 0;
+    flex: 0 0 2em;
 }
 
 #header-content {
@@ -51,19 +55,21 @@ body{
 }
 
 #main-content-container{
+    flex: 1 1 auto;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: column;
-    height: 100%;
+    /*height: 100%;*/
     position: relative;
     z-index: 0;
 }
 
 #main-content {
     width: 90%;
-    height: 100%;
+    /*height: 100%;*/
     display: flex;
+    flex: 1 1 auto;
     flex-flow: column;
     align-items: stretch;
     position: relative;
@@ -71,9 +77,17 @@ body{
 }
 
 .section-container {
-    margin-top: 20px;
     position: relative;
     z-index: 0;
+    top: 0;
+}
+
+.section-heading {
+    position: relative;
+    top: 15px;
+}
+
+#text-editor-container {
 }
 
 #text-editor {
@@ -94,14 +108,18 @@ body{
 }
 
 #kg-vis-container{
-    height: 70%;
+    position: relative;
+    display: flex;
+    flex-flow: column;
+    flex: 1 1 auto;
+    padding-bottom: 1em;
 }
 
 #kg-vis {
     border: gray 1px solid;
     border-radius: 5px;
-    height: 100%;
     background-color: white;
+    flex: 1 0 auto;
 }
 
 .hidden {
@@ -117,8 +135,9 @@ body{
     color: white;
     font-weight: bold;
     position: relative;
-    display: inline-block;
+    display: inline;
     z-index: 0;
+    padding: 4px;
 }
 
 .entity:hover {
@@ -127,7 +146,7 @@ body{
 
 .entity .entity-description{
     visibility: hidden;
-    background-color: black;
+    background-color: rgb(0, 107, 148);
     color: #fff;
     text-align: center;
     padding: 5px;
